fix: effect dropdowns moving behind modal footers on hover #1804

--- a/src/gui/scss/core/_global.scss
+++ b/src/gui/scss/core/_global.scss
@@ -1613,6 +1613,11 @@ thead th{
     background: #6c6c6c;
     color: rgba(255,255,255,0.8);
   }
+
+  &:hover {
+    background: #136e87;
+    cursor: pointer;
+  }
 }
 
 .flex-center {
